# rocq

./: .gitignore  .gitlab-ci-br.yml  .gitlab-ci.yml  .mailmap  INSTALL.md  META.rocq-core.template  Makefile  Makefile.ci  coq-core.opam  coq-native.opam  coq-native.opam.template  coq.opam  coqide-server.opam  default.nix  dune  dune-project  flake.nix  foo.v  makeci.sh  rocq-core.opam  rocq-devtools.opam  rocq-native.opam  rocq-native.opam.template  rocq-runtime.opam  rocq-test-suite.opam  rocqide.opam
.github/: CODEOWNERS
boot/: dune  env.ml  usage.ml
checker/: checkFlags.ml  checkInductive.ml  checkInductive.mli  checkLibrary.ml  checkLibrary.mli  check_stat.ml  check_stat.mli  coqchk_main.ml  dune  mod_checking.ml  mod_checking.mli  safe_checking.ml  safe_checking.mli  values.ml  votour.ml
clib/: cArray.ml  cArray.mli  cList.ml  cList.mli  cRef.ml  cRef.mli  cSig.mli  cString.ml  cString.mli  cUnix.ml  dune  dyn.ml  dyn.mli  exninfo.ml  hashset.ml  int.ml  int.mli  memprof_coq.memprof.ml  memprof_coq.mli  memprof_coq.std.ml  option.ml  option.mli  patricia.ml  patricia.mli  range.ml  range.mli  sList.ml  sList.mli  unicode.ml
compiler/: coqc_bin.ml  dune  scoqc.ml  scoqc.mli  util.ml
config/: coq_config.mli  dune
coqpp/: coqpp_ast.mli  coqpp_lex.mll  coqpp_main.ml  coqpp_parse.mly
dev/: debugger_support.ml  dune  dune-dbg.in  dune-workspace.all  nixpkgs.nix  top_printers.dbg  top_printers.ml  top_printers.mli  vm_printers.ml
doc/: Makefile.docgram  README.md  dune
engine/: dune  eConstr.ml  eConstr.mli  evar_kinds.ml  evar_kinds.mli  evarnames.ml  evarnames.mli  evarutil.ml  evarutil.mli  evd.ml  evd.mli  logic_monad.ml  logic_monad.mli  namegen.ml  namegen.mli  polyFlags.ml  polyFlags.mli  profile_tactic.ml  proofview.ml  proofview.mli  proofview_monad.ml  proofview_monad.mli  termops.ml  termops.mli  uState.ml  uState.mli  univFlex.ml  univFlex.mli  univGen.ml  univGen.mli  univMinim.ml  univMinim.mli  univNames.ml  univNames.mli  univProblem.ml  univProblem.mli  univSubst.ml  univSubst.mli  univVariances.ml  univVariances.mli
gramlib/: dune  gramext.ml  gramext.mli  grammar.ml  grammar.mli  lStream.ml  lStream.mli  plexing.mli
hint_attr_plugin/: _CoqProject
ide/rocqide/: FAQ  dune  idetop.ml  preferences.ml  rocqDriver.ml  rocqOps.ml  rocq_commands.ml  rocqide.ml  wg_ProofView.ml
ide/rocqide/protocol/: dune
interp/: abbreviation.ml  abbreviation.mli  constrexpr.mli  constrexpr_ops.ml  constrexpr_ops.mli  constrextern.ml  constrextern.mli  constrintern.ml  constrintern.mli  decls.ml  dumpglob.ml  dune  genintern.ml  genintern.mli  impargs.ml  impargs.mli  implicit_quantifiers.ml  implicit_quantifiers.mli  modintern.ml  modintern.mli  notation.ml  notation.mli  notation_ops.ml  notation_ops.mli  notation_term.mli  notationextern.ml  numTok.ml  numTok.mli  primNotations.ml  primNotations.mli  reserve.ml
kernel/: cClosure.ml  cClosure.mli  cPrimitives.ml  cPrimitives.mli  constant_typing.ml  constant_typing.mli  constr.ml  constr.mli  context.ml  context.mli  conv_oracle.ml  conv_oracle.mli  conversion.ml  conversion.mli  cooking.ml  cooking.mli  declarations.mli  declareops.ml  declareops.mli  discharge.ml  dune  entries.mli  environ.ml  environ.mli  esubst.ml  esubst.mli  float64.mli  float64_common.ml  float64_common.mli  genOpcodeFiles.ml  genlambda.ml  genlambda.mli  hConstr.ml  indTyping.ml  indTyping.mli  indtypes.ml  indtypes.mli  inductive.ml  inductive.mli  inferCumulativity.ml  (+89 more)
lib/: acyclicGraph.ml  acyclicGraph.mli  aux_file.ml  cDebug.ml  cErrors.ml  cErrors.mli  cWarnings.ml  cWarnings.mli  control.ml  control.mli  coqProject_file.ml  coqProject_file.mli  deprecation.ml  deprecation.mli  dune  feedback.ml  flags.ml  flags.mli  hopcroft.ml  hopcroft.mli  loc.ml  loc.mli  newProfile.ml  newProfile.mli  pp.ml  quickfix.ml  rocq_package.ml  rocq_package.mli  system.ml  util.ml  util.mli
man/: dune
parsing/: cLexer.ml  cLexer.mli  dune  extend.ml  extend.mli  g_constr.mlg  notation_gram.mli  notgram_ops.ml  procq.ml  procq.mli  tok.ml  tok.mli
perf/: dune
plugins/cc/: ccalgo.ml  ccalgo.mli  ccprojectability.ml  ccproof.ml  ccproof.mli  cctac.ml  dune
plugins/firstorder/: dune  formula.ml  g_ground.mlg  instances.ml  rules.ml  sequent.ml  unify.ml
plugins/ltac2/: dune  g_ltac2.mlg  g_ltac2.mli  tac2api.ml  tac2api.mli  tac2core.ml  tac2core.mli  tac2entries.ml  tac2entries.mli  tac2env.ml  tac2env.mli  tac2expr.mli  tac2extffi.ml  tac2extffi.mli  tac2extravals.ml  tac2ffi.ml  tac2ffi.mli  tac2helpers.ml  tac2helpers.mli  tac2hints.ml  tac2intern.ml  tac2intern.mli  tac2interp.ml  tac2judge.ml  tac2judge.mli  tac2match.ml  tac2names.ml  tac2names.mli  tac2print.ml  tac2qexpr.mli  tac2quote.ml  tac2quote.mli  tac2stdlib.ml  tac2stdlib.mli  tac2subst.ml  tac2subst.mli  tac2syn.ml  tac2syn.mli  tac2tactics.ml  tac2tactics.mli  (+4 more)
plugins/nsatz/: dune  nsatz.ml
plugins/ssr/: dune  ssrast.mli  ssrbwd.ml  ssrcommon.ml  ssrcommon.mli  ssrelim.ml  ssrequality.ml  ssrfwd.ml  ssrfwd.mli  ssripats.ml  ssrparser.mlg  ssrparser.mli  ssrtacs.mlg  ssrtacs.mli  ssrtacticals.ml  ssrtacticals.mli  ssrvernac.mlg  ssrview.ml  ssrview.mli
plugins/ssrrewrite/: dune  ssrrewrite.mlg
pretyping/: arguments_renaming.ml  arguments_renaming.mli  cases.ml  cases.mli  cbv.ml  coercion.ml  coercion.mli  coercionops.ml  coercionops.mli  combinators.ml  constr_matching.ml  detyping.ml  detyping.mli  dune  evarconv.ml  evarconv.mli  evardefine.ml  evarsolve.ml  evarsolve.mli  find_subterm.ml  find_subterm.mli  genConstr.ml  genConstr.mli  genarg.mli  geninterp.ml  geninterp.mli  gensubst.ml  gensubst.mli  globEnv.ml  globEnv.mli  glob_ops.ml  glob_ops.mli  glob_term.mli  heads.ml  indrec.ml  indrec.mli  inductiveops.ml  inductiveops.mli  keys.ml  keys.mli  (+30 more)
printing/: dune  (+11 more)
theories/Force/: Force.v  dune
tools/coqdep/lib/: args.ml  args.mli  common.ml  common.mli  dune  error.ml  error.mli  file_util.ml  file_util.mli  fl.ml  lexer.mli  lexer.mll  loadpath.ml  loadpath.mli  makefile.ml  rocqdep_main.ml  static_toplevel_libs.ml
tools/coqworkmgr/: dune
(+1588 files in other folders)
