
opam-version: "2.0"
synopsis: "Compatibility metapackage for Coq after the Rocq renaming"
maintainer: "The Rocq development team <coqdev@inria.fr>"
authors: "The Rocq development team, INRIA, CNRS, and contributors"
license: "LGPL-2.1-only"
homepage: "https://rocq-prover.org/"
doc: "https://rocq-prover.org/docs/"
bug-reports: "https://github.com/rocq-prover/rocq/issues"
depends: [
  "dune" {>= "3.8"}
  "coq-core" {= version}
  "coq-stdlib"
  "coqide-server" {= version}
]
dev-repo: "git+https://github.com/rocq-prover/rocq.git"