(library
 (name rocqpretyping)
 (synopsis "Rocq's Type Inference Component (Pretyper)")
 (public_name rocq-runtime.pretyping)
 (wrapped true)
 (modules_without_implementation locus pattern glob_term ltac_pretype)
 (libraries engine)
 (flags :standard -open Rocqutils))

(deprecated_library_name
 (old_public_name coq-core.pretyping)
 (new_public_name rocq-runtime.pretyping))
