(library
 (name cc_core_plugin)
 (public_name rocq-runtime.plugins.cc_core)
 (synopsis "Rocq's congruence closure plugin")
 (modules (:standard \ g_congruence))
 (libraries rocq-runtime.tactics))

(library
 (name cc_plugin)
 (public_name rocq-runtime.plugins.cc)
 (synopsis "Rocq's congruence closure plugin (Ltac1 syntax)")
 (modules g_congruence)
 (flags :standard -open Cc_core_plugin)
 (libraries rocq-runtime.plugins.ltac rocq-runtime.plugins.cc_core))

(rule
 (targets g_congruence.ml)
 (deps (:mlg g_congruence.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
