(library
 (name firstorder_core_plugin)
 (public_name rocq-runtime.plugins.firstorder_core)
 (synopsis "Rocq's first order logic solver plugin")
 (modules (:standard \ g_ground))
 (libraries rocq-runtime.tactics))

(library
 (name firstorder_plugin)
 (public_name rocq-runtime.plugins.firstorder)
 (synopsis "Rocq's first order logic solver plugin (Ltac1 syntax)")
 (flags :standard -open Firstorder_core_plugin)
 (modules g_ground)
 (libraries rocq-runtime.plugins.firstorder_core rocq-runtime.plugins.ltac))

(rule
 (targets g_ground.ml)
 (deps (:mlg g_ground.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
