(library
 (name ltac2_plugin)
 (public_name rocq-runtime.plugins.ltac2)
 (synopsis "Ltac2 plugin")
 (modules_without_implementation tac2expr tac2qexpr tac2types)
 (libraries vernac rocq-runtime.plugins.cc_core))

(rule
 (targets g_ltac2.ml)
 (deps (:mlg g_ltac2.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
