(library
 (name ssreflect_plugin)
 (public_name rocq-runtime.plugins.ssreflect)
 (synopsis "Rocq's ssreflect plugin")
 (modules_without_implementation ssrast)
 (flags :standard -open Gramlib)
 (libraries rocq-runtime.plugins.ssrmatching))

(rule
 (targets ssrvernac.ml)
 (deps (:mlg ssrvernac.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))

(rule
 (targets ssrparser.ml)
 (deps (:mlg ssrparser.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))

(rule
 (targets ssrtacs.ml)
 (deps (:mlg ssrtacs.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
