(library
 (name ssreflect_rewrite_plugin)
 (public_name rocq-runtime.plugins.ssreflect_rewrite)
 (synopsis "Rocq's ssreflect plugin for rewrite compatibility")
 (flags :standard -open Gramlib)
 (libraries rocq-runtime.plugins.ssrmatching rocq-runtime.plugins.ssreflect))

(rule
 (targets ssrrewrite.ml)
 (deps (:mlg ssrrewrite.mlg))
 (action (chdir %{project_root} (run rocq pp-mlg %{deps}))))
