(library
 (name coqworkmgrApi)
 (public_name rocq-runtime.coqworkmgrapi)
 (modules coqworkmgrApi)
 (wrapped false)
 (libraries str unix))

(library
 (name rocqworkmgr)
 (modules rocqworkmgr)
 (libraries coqworkmgrApi))

(executable
 (name coqworkmgr)
 (public_name coqworkmgr)
 (package coq-core)
 (modules coqworkmgr)
 (libraries rocqworkmgr))
