(library
 (name coqdeplib)
 (public_name rocq-runtime.coqdeplib)
 (libraries rocq-runtime.boot rocq-runtime.lib findlib.internal)
 (flags :standard -open Rocqutils))

(rule
 (target lexer.ml)
 (deps   lexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
